--- a/deploy/complete/terraform/terraform.tfvars.example
+++ b/deploy/complete/terraform/terraform.tfvars.example
@@ -86,5 +86,5 @@ catalog_enabled        = false
 oda_enabled           = false
 oda_uri               = ""
 oda_channel_id        = ""
-oda_secret            = ""
+oda_channel_secret    = ""
 oda_user_init_message = ""
