--- a/deploy/basic/terraform/schema.yaml
+++ b/deploy/basic/terraform/schema.yaml
@@ -521,6 +521,8 @@ outputGroups:
     outputs:
       - lb_public_url
       - lb_nip_host_url
+      - mushop_source_code
+      - mushop_version
 
   - title: Passwords and Keys
     outputs:
@@ -537,8 +539,6 @@ outputGroups:
     outputs:
       - dev
       - comments
-      - mushop_source_code
-      - mushop_version
 
 outputs:
   lb_public_url_button:
@@ -549,8 +549,7 @@ outputs:
 
   lb_public_url:
     type: link
-    title: MuShop
-    displayText: Storefront
+    title: MuShop URL
     visible: true
 
   lb_nip_host_url:
@@ -601,4 +600,4 @@ outputs:
     displayText: "The application URL will be unavailable for a few minutes after provisioning, while the application is configured"
     visible: true
   
-primaryOutputButton: ${lb_public_url}
+primaryOutputButton: ${lb_public_url_button}
