basic: consolidating schema

--- a/deploy/basic/terraform/schema.yaml
+++ b/deploy/basic/terraform/schema.yaml
@@ -1,4 +1,4 @@
-# Copyright (c) 2019-2021 Oracle and/or its affiliates. All rights reserved.
+# Copyright (c) 2019-2022 Oracle and/or its affiliates. All rights reserved.
 # Licensed under the Universal Permissive License v 1.0 as shown at http://oss.oracle.com/licenses/upl.
 # 
 
@@ -20,10 +20,6 @@ groupings:
     - tenancy_ocid
     - region
 
-  - title: "General Configuration"
-    variables:
-    - num_nodes
-
   - title: "Optional Configuration"
     variables:
     - autonomous_database_name
@@ -43,6 +39,7 @@ groupings:
 
   - title: "Advanced Resource Options - Compute"
     variables:
+    - num_nodes
     - instance_shape
     - instance_ocpus
     - instance_shape_config_memory_in_gbs
@@ -115,6 +112,9 @@ variables:
     description: "Choose the number of compute instances to deploy."
     default: "2"
     required: true
+    visible:
+      and:
+        - show_advanced
 
   autonomous_database_name:
     type: string
