helm updated deprecated notation

--- a/deploy/complete/helm-chart/mushop/charts/orders/templates/orders-deployment.yaml
+++ b/deploy/complete/helm-chart/mushop/charts/orders/templates/orders-deployment.yaml
@@ -71,4 +71,4 @@ spec:
             medium: Memory
         {{- include "orders.volumes" . | nindent 8 }}
       nodeSelector:
-          beta.kubernetes.io/os: linux
+          kubernetes.io/os: linux
