--- a/deploy/complete/helm-chart/mushop/charts/payment/templates/payment-deployment.yaml
+++ b/deploy/complete/helm-chart/mushop/charts/payment/templates/payment-deployment.yaml
@@ -45,4 +45,4 @@ spec:
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
       nodeSelector:
-          beta.kubernetes.io/os: linux
+          kubernetes.io/os: linux
