--- a/deploy/complete/helm-chart/mushop/charts/carts/templates/carts-deployment.yaml
+++ b/deploy/complete/helm-chart/mushop/charts/carts/templates/carts-deployment.yaml
@@ -49,4 +49,4 @@ spec:
             medium: Memory
         {{- include "carts.volumes" . | nindent 8 }}
       nodeSelector:
-          beta.kubernetes.io/os: linux
+          kubernetes.io/os: linux
