--- a/deploy/complete/helm-chart/mushop/charts/session/templates/session-deployment.yaml
+++ b/deploy/complete/helm-chart/mushop/charts/session/templates/session-deployment.yaml
@@ -31,4 +31,4 @@ spec:
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
       nodeSelector:
-        beta.kubernetes.io/os: linux
+        kubernetes.io/os: linux
