--- a/deploy/complete/helm-chart/setup/values.yaml
+++ b/deploy/complete/helm-chart/setup/values.yaml
@@ -19,7 +19,8 @@ prometheus:
       static_configs:
         - targets:
           - {{ .Release.Name }}-ingress-nginx-controller-metrics:9913
-
+  nodeExporter:
+    hostRootfs: false
 
 # https://github.com/kubernetes-sigs/service-catalog/blob/master/charts/catalog/README.md
 catalog:
