--- a/deploy/complete/terraform/chart-values/prometheus-values.yaml
+++ b/deploy/complete/terraform/chart-values/prometheus-values.yaml
@@ -1,4 +1,4 @@
-# Copyright (c) 2020 Oracle and/or its affiliates. All rights reserved.
+# Copyright (c) 2020, 2022, Oracle and/or its affiliates. All rights reserved.
 # Licensed under the Universal Permissive License v 1.0 as shown at http://oss.oracle.com/licenses/upl.
 # 
 
@@ -9,3 +9,5 @@ extraScrapeConfigs: |
       static_configs:
         - targets:
           - mushop-utils-ingress-nginx-controller-metrics:9913
+nodeExporter:
+  hostRootfs: false
