--- a/deploy/complete/helm-chart/mushop/charts/edge/templates/edge-svc.yaml
+++ b/deploy/complete/helm-chart/mushop/charts/edge/templates/edge-svc.yaml
@@ -6,6 +6,7 @@ metadata:
   labels:
 {{ include "edge-router.labels" . | indent 4 }}
 spec:
+  type: {{ .Values.service.type }}
   selector:
     app.kubernetes.io/name: {{ include "edge-router.name" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
