Helm Charts - Added support for OKE Virtual Nodes
Signed-off-by: junior <junior@users.noreply.github.com>

--- a/deploy/complete/helm-chart/mushop/charts/api/templates/api-deployment.yaml
+++ b/deploy/complete/helm-chart/mushop/charts/api/templates/api-deployment.yaml
@@ -57,5 +57,7 @@ spec:
               port: http
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+{{- if not .Values.global.okeVirtualNodesSupport }}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
+{{- end }}
