--- a/deploy/complete/helm-chart/mushop/charts/edge/templates/edge-deployment.yaml
+++ b/deploy/complete/helm-chart/mushop/charts/edge/templates/edge-deployment.yaml
@@ -43,8 +43,10 @@ spec:
               port: http
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+{{- if not .Values.global.okeVirtualNodesSupport }}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
+{{- end }}
       volumes:
         - name: config
           configMap:
