--- a/deploy/complete/helm-chart/mushop/charts/payment/templates/payment-deployment.yaml
+++ b/deploy/complete/helm-chart/mushop/charts/payment/templates/payment-deployment.yaml
@@ -42,7 +42,9 @@ spec:
             periodSeconds: 5
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+{{- if not .Values.global.okeVirtualNodesSupport }}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
+{{- end }}
       nodeSelector:
           kubernetes.io/os: linux
