--- a/deploy/complete/helm-chart/mushop/charts/session/templates/session-deployment.yaml
+++ b/deploy/complete/helm-chart/mushop/charts/session/templates/session-deployment.yaml
@@ -28,7 +28,9 @@ spec:
           ports:
             - name: redis
               containerPort: 6379
+{{- if not .Values.global.okeVirtualNodesSupport }}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
+{{- end }}
       nodeSelector:
         kubernetes.io/os: linux
