--- a/deploy/complete/helm-chart/mushop/charts/assets/templates/assets-deployment.yaml
+++ b/deploy/complete/helm-chart/mushop/charts/assets/templates/assets-deployment.yaml
@@ -38,5 +38,7 @@ spec:
               port: http
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+{{- if not .Values.global.okeVirtualNodesSupport }}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
+{{- end }}
