Helm Charts - Virtual Nodes support values example
Signed-off-by: junior <junior@users.noreply.github.com>

--- a/deploy/complete/helm-chart/mushop/values.yaml
+++ b/deploy/complete/helm-chart/mushop/values.yaml
@@ -10,6 +10,7 @@ global:
   oadbWalletSecret:
   oadbConnectionSecret:
   oosBucketSecret:
+  okeVirtualNodesSupport: false
 
 # Depending on the scenario, certain resources might need to be skipped.
 # For example, --set tags.streaming=false to disable required streaming manifests
