MuShop helm chart updates for OKE Virtual Nodes
Signed-off-by: junior <junior@users.noreply.github.com>

--- a/deploy/complete/helm-chart/mushop/charts/api/templates/api-deployment.yaml
+++ b/deploy/complete/helm-chart/mushop/charts/api/templates/api-deployment.yaml
@@ -60,4 +60,6 @@ spec:
 {{- if not .Values.global.okeVirtualNodesSupport }}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
+{{- else }}
+      automountServiceAccountToken: false
 {{- end }}
