--- a/deploy/complete/helm-chart/mushop/charts/catalogue/templates/catalogue-deployment.yaml
+++ b/deploy/complete/helm-chart/mushop/charts/catalogue/templates/catalogue-deployment.yaml
@@ -62,4 +62,6 @@ spec:
 {{- if not .Values.global.okeVirtualNodesSupport }}
       securityContext:
         fsGroup: 687467
+{{- else }}
+      automountServiceAccountToken: false
 {{- end }}
