--- a/deploy/complete/helm-chart/mushop/charts/edge/templates/edge-deployment.yaml
+++ b/deploy/complete/helm-chart/mushop/charts/edge/templates/edge-deployment.yaml
@@ -46,9 +46,10 @@ spec:
 {{- if not .Values.global.okeVirtualNodesSupport }}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
+{{- else }}
+      automountServiceAccountToken: false
 {{- end }}
       volumes:
         - name: config
           configMap:
             name: {{ include "edge-router.fullname" .}}
-
