--- a/deploy/complete/helm-chart/mushop/charts/events/templates/events-deployment.yaml
+++ b/deploy/complete/helm-chart/mushop/charts/events/templates/events-deployment.yaml
@@ -48,4 +48,6 @@ spec:
 {{- if not .Values.global.okeVirtualNodesSupport }}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
+{{- else }}
+      automountServiceAccountToken: false
 {{- end }}
