--- a/deploy/complete/helm-chart/mushop/charts/payment/templates/payment-deployment.yaml
+++ b/deploy/complete/helm-chart/mushop/charts/payment/templates/payment-deployment.yaml
@@ -45,6 +45,8 @@ spec:
 {{- if not .Values.global.okeVirtualNodesSupport }}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
+{{- else }}
+      automountServiceAccountToken: false
 {{- end }}
       nodeSelector:
           kubernetes.io/os: linux
