fixes jenkins chart old version dependancies

--- a/deploy/complete/helm-chart/setup/requirements.yaml
+++ b/deploy/complete/helm-chart/setup/requirements.yaml
@@ -30,6 +30,6 @@ dependencies:
     repository: https://charts.jetstack.io
   # jenkins
   - name: jenkins
-    version: 2.1.0
+    version: 4.3.23
     condition: jenkins.enabled
-    repository: https://charts.helm.sh/stable
+    repository: https://charts.jenkins.io
