--- a/deploy/complete/helm-chart/setup/values.yaml
+++ b/deploy/complete/helm-chart/setup/values.yaml
@@ -134,19 +134,22 @@ jenkins:
       # enable ingress only if the ingress-controller `nginx-ingress` is enabled.
       enabled: true
       apiVersion: networking.k8s.io/v1
-      #apiVersion: "networking.k8s.io/v1beta1"
+      metadata:
+        annotations:
+          kubernetes.io/ingress.class: nginx
+          nginx.ingress.kubernetes.io/rewrite-target: /$2
       labels: {}
       spec:
-        ingressClassName: nginx
         rules:
         - http:
             paths:
-              - path: /jenkins
+              - path: /jenkins(/|$)(.*)
                 pathType: Prefix
                 backend:
-                  serviceName: >-
-                      {{ template "jenkins.fullname" . }}
-                  servicePort: 8080
+                  service:
+                    name: mushop-setup-jenkins
+                    port: 
+                      number: 8080
     installPlugins:
         - kubernetes:3900.va_dce992317b_4
         - workflow-aggregator:596.v8c21c963d92d
@@ -155,3 +158,4 @@ jenkins:
         - blueocean:1.27.3
         - credentials-binding:604.vb_64480b_c56ca_
         - workflow-job:1292.v27d8cc3e2602
+
