updaing helm commands and deprecating helm2
Signed-off-by: junior <junior@users.noreply.github.com>

--- a/src/docs/data/config/settings.yaml
+++ b/src/docs/data/config/settings.yaml
@@ -23,5 +23,5 @@ toggles:
       - label: 3.x
         toggle: stg-helm-3
         active: true
-      - label: 2.x
-        toggle: stg-helm-2
+      # - label: 2.x
+      #   toggle: stg-helm-2
