--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -10,6 +10,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      HUGO_VERSION: 0.122.0
     steps:
     - name: Checkout
       uses: actions/checkout@v4
@@ -19,7 +21,11 @@ jobs:
         node-version: ''
     - name: Setup Hugo
       run: |
-        sudo apt install -y hugo
+        wget -O ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.deb \
+        && sudo dpkg -i ${{ runner.temp }}/hugo.deb
+    - name: Setup Pages
+      id: pages
+      uses: actions/configure-pages@v5
     - name: Build Hugo Docs
       run: |
           cd src/docs
@@ -42,4 +48,3 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
-
