--- a/.github/workflows/test-docs.yml
+++ b/.github/workflows/test-docs.yml
@@ -7,18 +7,19 @@ on:
 jobs:
   test-build:
     runs-on: ubuntu-latest
+    env:
+      HUGO_VERSION: 0.122.0
     steps:
     - name: Checkout
-      uses: actions/checkout@v1
+      uses: actions/checkout@v4
     - name: Setup Node
-      uses: actions/setup-node@v1
+      uses: actions/setup-node@v4
       with:
-        node-version: '10.x'
+        node-version: ''
     - name: Setup Hugo
-      uses: peaceiris/actions-hugo@v2
-      with:
-        hugo-version: '0.66.0'
-        extended: true
+      run: |
+        wget -O ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.deb \
+        && sudo dpkg -i ${{ runner.temp }}/hugo.deb
     - name: Build Hugo Docs
       run: |
           cd src/docs
