--- a/deploy/complete/helm-chart/setup/values.yaml
+++ b/deploy/complete/helm-chart/setup/values.yaml
@@ -33,12 +33,16 @@ ingress-nginx:
   controller:
     metrics:
       enabled: true
+    ingressClassResource:
+      default: true
 
 # https://github.com/jetstack/cert-manager/blob/master/README.md
 # https://artifacthub.io/packages/helm/jetstack/cert-manager
 cert-manager:
   enabled: true
-  installCRDs: true
+  crds:
+    enabled: true
+    keep: false
 
 # https://github.com/grafana/helm-charts/blob/main/charts/grafana/README.md
 # https://artifacthub.io/packages/helm/grafana/grafana
@@ -136,10 +140,10 @@ jenkins:
       apiVersion: networking.k8s.io/v1
       metadata:
         annotations:
-          kubernetes.io/ingress.class: nginx
           nginx.ingress.kubernetes.io/rewrite-target: /$2
       labels: {}
       spec:
+        ingressClassName: nginx
         rules:
         - http:
             paths:
