--- a/deploy/complete/kubernetes/ingress/mushop-dev.yaml
+++ b/deploy/complete/kubernetes/ingress/mushop-dev.yaml
@@ -2,9 +2,8 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: mushop-dev
-  annotations:
-    kubernetes.io/ingress.class: nginx
 spec:
+  ingressClassName: nginx
   rules:
   - http:
       paths:
