--- a/deploy/complete/kubernetes/ingress/mushop-grafana.yaml
+++ b/deploy/complete/kubernetes/ingress/mushop-grafana.yaml
@@ -1,13 +1,13 @@
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: grafana
   annotations:
-    kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
     cert-manager.io/cluster-issuer: letsencrypt-prod
     cert-manager.io/acme-challenge-type: http01
 spec:
+  ingressClassName: nginx
   tls:
   - secretName: mushop-grafana-tls
     hosts:
