--- a/deploy/complete/helm-chart/mushop/templates/cluster-issuers.yaml
+++ b/deploy/complete/helm-chart/mushop/templates/cluster-issuers.yaml
@@ -18,7 +18,7 @@ spec:
     solvers:
     - http01:
         ingress:
-          class: nginx
+          ingressClassName: nginx
 ---
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
@@ -36,7 +36,7 @@ spec:
     solvers:
     - http01:
         ingress:
-          class: nginx
+          ingressClassName: nginx
 ---
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
